--- a/dashboard.css
+++ b/dashboard.css
@@ -104,7 +104,7 @@ header a span:last-child {
 .categories {
   display: grid;
   height: 600px;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-gap: 18px;
   color: white;
   overflow-y: scroll;
@@ -257,9 +257,17 @@ header a span:last-child {
   background-color: #1f1f1fbe;
   aspect-ratio: 1 / 1;
   padding: 20px;
-  margin: 15px;
+  margin-right: 15px;
+  gap: 10px;
   border-radius: 20px;
-  flex-grow: 1;
+  /* flex-grow: 1; */
+}
+
+.update-user {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
 }
 
 .box:first-child p {
@@ -297,16 +305,18 @@ header a span:last-child {
 
 label {
   color: white;
+  font-size: 1.2vw;
   margin-bottom: 10px;
 }
 
 .passwd input:not([type="submit"]) {
-  height: 35px;
+  font-size: 1vw;
+  height: 50px;
   width: 400px;
   color: white;
   background-color: #1f1f1fbe;
   border-radius: 8px;
-  padding-left: 12px;
+  padding-left: 18px;
   margin-bottom: 20px;
   outline: none;
   border: none;
@@ -319,7 +329,6 @@ label {
   color: white;
   background-color: #ff5f45;
   border-radius: 10px;
-  margin-right: 15px;
   border: none;
   cursor: pointer;
 }
@@ -447,11 +456,6 @@ button {
   transition: all 0.5s ease;
 }
 
-.button a {
-  height: 100%;
-  width: 100%;
-}
-
 hr {
   margin: 10px;
   border: 1px solid #808080;
@@ -564,38 +568,6 @@ tr:hover .edit {
   transform: scale(0.8);
 }
 
-.image {
-  height: 45px;
-  width: 45px;
-  border-radius: 100%;
-  border: 2px solid white;
-  margin: 0 15px 0 15px;
-  overflow: hidden;
-}
-
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 100px;
-  width: 100%;
-  color: white;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
-}
-
 ::-webkit-scrollbar {
   width: 8px;
   /* display: none; */
@@ -651,11 +623,4 @@ footer ul a {
   to {
     rotate: 0deg;
   }
-}
-
-.test {
-  height: 100px;
-  width: 100px;
-  background-color: red;
-  cursor: pointer;
 }
