--- a/inscription.css
+++ b/inscription.css
@@ -10,10 +10,8 @@
 
 body {
   background: rgb(15, 15, 15);
-  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-image: url("gradient.svg"); */
   transition: filter 0.4s ease;
   overflow-x: hidden;
   animation: fade 1s forwards;
@@ -25,7 +23,6 @@ header {
   justify-content: space-between;
   color: white;
   height: 100px;
-  /* box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2); */
 }
 
 .home {
@@ -46,100 +43,6 @@ header a span:last-child {
   color: white;
 }
 
-.options {
-  display: flex;
-  height: 45px;
-  width: auto;
-  color: white;
-  user-select: none;
-}
-
-#connexion,
-.inscription {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  border-radius: 30px;
-  font-size: 16px;
-  cursor: pointer;
-  margin-right: 20px;
-  transition: all 0.4s ease;
-}
-
-.inscription a {
-  color: white;
-}
-
-.inscription {
-  color: white;
-  background-color: #ff5f45;
-  border: none;
-}
-
-#connexion {
-  color: #ff5f45;
-  border: 2px solid #ff5f45;
-}
-
-#connexion a {
-  color: #ff5f45;
-}
-
-.inscription2,
-.connexion2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 175px;
-  border-radius: 30px;
-  font-size: 18px;
-  cursor: pointer;
-  margin-right: 20px;
-  transition: all 0.4s ease;
-}
-
-.inscription2 a {
-  color: white;
-}
-
-.inscription2 {
-  color: white;
-  background-color: #ff5f45;
-  border: none;
-}
-
-.connexion2 {
-  color: #ff5f45;
-  border: 2px solid #ff5f45;
-}
-
-.connexion2 a {
-  color: #ff5f45;
-}
-
-.options button:hover a {
-  color: #00352c;
-}
-
-.options button {
-  height: 40px;
-  width: 150px;
-  background-color: #ff5f45;
-  border: none;
-  border-radius: 30px;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-
-.options button:hover {
-  color: #333333;
-  background-color: #f1f1f1;
-}
-
 #profile {
   border-radius: 100%;
   margin-right: 30px;
@@ -157,15 +60,19 @@ header a span:last-child {
 }
 
 .container-login {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   height: 100%;
   width: auto;
   padding-left: 185px;
 }
 
-.imgLogin h2 {
+.container-login h2 {
+  color: rgb(255, 83, 83);
+  font-size: 1.5vw;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.imgLogin h1 {
   font-size: 200px;
   color: white;
 }
@@ -253,7 +160,6 @@ input[type="submit"] {
   top: 0;
   left: 90px;
   rotate: 19deg;
-  /* filter: blur(3px); */
 }
 
 .icons img:nth-child(2) {
@@ -262,7 +168,6 @@ input[type="submit"] {
   top: -135px;
   left: 260px;
   rotate: -46deg;
-  /* filter: blur(3px); */
   z-index: -1;
 }
 
@@ -281,7 +186,6 @@ input[type="submit"] {
   top: 500px;
   left: 460px;
   rotate: -177deg;
-  /* filter: blur(3px); */
   z-index: -1;
 }
 
@@ -291,7 +195,6 @@ input[type="submit"] {
   top: -200px;
   left: 440px;
   rotate: 147deg;
-  /* filter: blur(3px); */
   z-index: -1;
 }
 
@@ -301,7 +204,6 @@ input[type="submit"] {
   top: 260px;
   left: 570px;
   rotate: -70deg;
-  /* filter: blur(3px); */
   z-index: -1;
 }
 
@@ -311,31 +213,7 @@ input[type="submit"] {
   top: -80px;
   left: 650px;
   rotate: -90deg;
-  /* filter: blur(3px); */
   z-index: -1;
-}
-
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 100px;
-  width: 100%;
-  color: white;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
 }
 
 @keyframes move-icon {
