--- a/home.css
+++ b/home.css
@@ -8,13 +8,8 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  background: rgb(20, 20, 20);
-  /* background: linear-gradient(0deg, rgba(15,15,15,1) 0%, rgba(24,24,24,1) 100%); */
-  background-size: cover;
-  background-repeat: no-repeat;
-  /* background-image: url("gradient.svg"); */
-  /* overflow-y: hidden; */
+html body {
+  background-color: rgb(20, 20, 20);
   transition: filter 0.4s ease;
   animation: fade 1s forwards;
 }
@@ -24,9 +19,7 @@ header {
   align-items: center;
   justify-content: space-between;
   color: white;
-  height: 100px;
-  /* box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2); */
-}
+  height: 100px;}
 
 .home {
   margin-left: 35px;
@@ -81,10 +74,10 @@ header a span:last-child {
   object-fit: cover;
 }
 
-.container {
+/* .container {
   height: 829px;
   width: 100%;
-}
+} */
 
 .icons {
   position: absolute;
@@ -172,32 +165,34 @@ header a span:last-child {
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  height: 220px;
+  height: 12vw;
   width: 100%;
 }
 
 .search h2 {
   color: white;
-  font-size: 38px;
+  font-size: 2vw;
   font-weight: 800;
   animation: title 1s forwards;
 }
 
-.search-container2 {
+.search-container {
   display: flex;
   align-items: center;
-  height: 60px;
-  width: 1000px;
+  /* height: 60px;
+  width: 1000px; */
+  height: 3.2vw;
+  width: 50vw;
   border-radius: 10px;
   background-color: white;
   user-select: none;
   box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
 }
 
-.search-container2 input[type="search"] {
+.search-container input[type="search"] {
   flex: 1;
   border: none;
-  font-size: 20px;
+  font-size: 1.2vw;
   background-color: white;
 }
 
@@ -207,7 +202,7 @@ header a span:last-child {
   justify-content: center;
   height: 100%;
   width: auto;
-  padding: 12px 0 12px 12px;
+  padding: 12px;
   cursor: pointer;
   border-radius: 10px;
   user-select: none;
@@ -216,15 +211,13 @@ header a span:last-child {
 #search-icon img {
   height: 100%;
   width: 100%;
-  /* filter: invert(100%) brightness(200%); */
+  object-fit: cover;
 }
 
 .searchBar {
-  width: 300px;
+  width: 100%;
   height: 100%;
-  font-size: 28px;
   color: #333333;
-  padding: 30px;
   border: none;
   border-radius: 0 10px 10px 0;
   outline: none;
@@ -307,34 +300,11 @@ header a span:last-child {
 .Name {
   position: absolute;
   color: white;
-  bottom: 10px;
+  bottom: 5px;
   left: 20px;
   font-size: 1vw;
   font-weight: 500;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-direction: column;
-  height: 100px;
-  width: 100%;
-  color: white;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  list-style: none;
-}
-
-footer ul a {
-  color: white;
-  margin-right: 10px;
 }
 
 @keyframes move-icon {
