--- a/creation.css
+++ b/creation.css
@@ -116,7 +116,7 @@ header a span:last-child {
   animation: rotate 0.8s ease forwards;
 }
 
-.input-quiz {
+.input-quiz, .input-quiz2 {
   height: 40px;
   width: 190px;
   font-size: 18px;
@@ -128,6 +128,10 @@ header a span:last-child {
   box-shadow: 0 20px 20px 5px rgba(0, 0, 0, 0.1);
   outline: none;
   margin-right: 15px;
+}
+
+.input-quiz2 {
+  width: 5vw;
 }
 
 .difficulty {
